--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,7 @@ http {
         # 2. AUTH SERVICE (/auth)
         # ----------------------------------------------------
         location /auth/ {
-            proxy_pass http://auth_service/;
+            proxy_pass http://auth_service;
             
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
