--- a/.gitignore
+++ b/.gitignore
@@ -19330,3 +19330,45 @@ backend/media_service/app/__pycache__/main.cpython-313.pyc
 backend/media_service/app/application/__pycache__/__init__.cpython-313.pyc
 backend/media_service/app/application/__pycache__/dtos.cpython-313.pyc
 backend/media_service/app/application/__pycache__/services.cpython-313.pyc
+.vscode/settings.json
+backend/media_service/app/__pycache__/database.cpython-313.pyc
+backend/media_service/app/__pycache__/main.cpython-313.pyc
+backend/media_service/app/core/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/core/__pycache__/config.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/entities.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/interfaces.cpython-313.pyc
+backend/media_service/app/infrastructure/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/database/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/database/__pycache__/mongo_repository.cpython-313.pyc
+backend/media_service/app/infrastructure/messaging/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/messaging/__pycache__/rabbitmq_publisher.cpython-313.pyc
+backend/media_service/app/infrastructure/security/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/security/__pycache__/encryption.cpython-313.pyc
+backend/media_service/app/models/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/models/__pycache__/share.cpython-313.pyc
+backend/media_service/app/presentation/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/presentation/__pycache__/dependencies.cpython-313.pyc
+backend/media_service/app/presentation/api/__pycache__/files.cpython-313.pyc
+backend/media_service/app/schemas/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/schemas/__pycache__/sharing.cpython-313.pyc
+backend/media_service/app/services/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/services/__pycache__/rabbitmq_service.cpython-313.pyc
+backend/media_service/app/services/__pycache__/share_event_publisher.cpython-313.pyc
+backend/media_service/app/services/__pycache__/sharing_service.cpython-313.pyc
+backend/media_service/app/tests/__pycache__/conftest.cpython-313-pytest-7.4.3.pyc
+backend/media_service/app/tests/__pycache__/test_sharing_endpoints.cpython-313-pytest-7.4.3.pyc
+backend/media_service/app/utils/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/utils/__pycache__/security.cpython-313.pyc
+backend/media_service/app/utils/__pycache__/validators.cpython-313.pyc
+.vscode/settings.json
+backend/media_service/app/__pycache__/database.cpython-313.pyc
+backend/media_service/app/__pycache__/main.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/entities.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/interfaces.cpython-313.pyc
+backend/media_service/app/infrastructure/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/database/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/database/__pycache__/mongo_repository.cpython-313.pyc
+backend/media_service/app/services/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/utils/__pycache__/security.cpython-313.pyc
