--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,21 +95,21 @@ services:
       retries: 5
       start_period: 40s
 
-  # pgadmin:
-  #   image: dpage/pgadmin4
-  #   container_name: flowdock_pgadmin
-  #   restart: always
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
-  #     PGADMIN_DEFAULT_PASSWORD: admin
-  #   ports:
-  #     - "5050:80"
-  #   networks:
-  #     - flowdock_public
-  #     - flowdock_internal
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: flowdock_pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - flowdock_public
+      - flowdock_internal
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   # --- APP SERVICES ---
   frontend:
