--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aio-pika>=9.5.8",
     "argon2-cffi==23.1.0",
     "authlib>=1.6.5",
     "cryptography==41.0.7",
