--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi==0.104.1",
     "httpx==0.25.2",
     "itsdangerous==2.1.2",
+    "jwt>=1.4.0",
     "motor==3.3.2",
     "passlib[bcrypt]==1.7.4",
     "pika==1.3.2",
@@ -29,6 +30,7 @@ dependencies = [
     "python-multipart==0.0.6",
     "qrcode==7.4.2",
     "redis==5.0.1",
+    "requests>=2.32.5",
     "sqlalchemy==2.0.36",
     "uvicorn[standard]==0.24.0",
 ]
