--- a/.gitignore
+++ b/.gitignore
@@ -19387,3 +19387,27 @@ backend/auth_service/app/core/__pycache__/config.cpython-313.pyc
 backend/auth_service/app/presentation/api/__pycache__/logs.cpython-313.pyc
 backend/auth_service/app/presentation/api/__pycache__/logs.cpython-313.pyc
 backend/auth_service/app/__pycache__/database.cpython-313.pyc
+backend/media_service/app/infrastructure/http/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/http/__pycache__/auth_client.cpython-313.pyc
+backend/media_service/app/infrastructure/http/__pycache__/logger.cpython-313.pyc
+backend/media_service/app/infrastructure/http/__pycache__/logger.cpython-313.pyc
+backend/media_service/app/infrastructure/messaging/__pycache__/no_op_publisher.cpython-313.pyc
+backend/media_service/app/presentation/api/__pycache__/folders.cpython-313.pyc
+backend/media_service/app/presentation/api/__pycache__/public.cpython-313.pyc
+backend/media_service/__pycache__/test_folder_logic.cpython-313-pytest-7.4.3.pyc
+backend/media_service/__pycache__/test_folder_operations.cpython-313-pytest-7.4.3.pyc
+backend/media_service/__pycache__/test_folder_operations.cpython-313-pytest-9.0.2.pyc
+backend/media_service/app/__pycache__/database.cpython-313.pyc
+backend/media_service/app/__pycache__/main.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/entities.cpython-313.pyc
+backend/media_service/app/domain/__pycache__/interfaces.cpython-313.pyc
+backend/media_service/app/infrastructure/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/database/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/infrastructure/database/__pycache__/mongo_repository.cpython-313.pyc
+backend/media_service/app/infrastructure/http/__pycache__/logger.cpython-313.pyc
+backend/media_service/app/infrastructure/messaging/__pycache__/no_op_publisher.cpython-313.pyc
+backend/media_service/app/presentation/api/__pycache__/folders.cpython-313.pyc
+backend/media_service/app/presentation/api/__pycache__/public.cpython-313.pyc
+backend/media_service/app/services/__pycache__/__init__.cpython-313.pyc
+backend/media_service/app/utils/__pycache__/security.cpython-313.pyc
