all endpoints of folder operations and shared folder downloads are now working as intended.

--- a/.gitignore
+++ b/.gitignore
@@ -19419,3 +19419,6 @@ FOLDER_OPERATIONS_BUG_FIXES.md
 IMPLEMENTATION_SUMMARY.md
 backend/media_service/PHASE_2_3_4_IMPLEMENTATION.md
 backend/media_service/PHASE_2_3_4_QUICK_REFERENCE.md
+CRITICAL_FIXES_SUMMARY.md
+SHARED_FOLDER_ZIP_FIX.md
+THREE_FIXES_AND_ZIP_DOWNLOAD.md
