--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -34,5 +34,5 @@ EXPOSE 5173
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:5173 || exit 1
 
-# Start the application
-CMD ["serve", "-s", "dist", "-l", "5173"]
+# Start the application with --listen flag to bind to 0.0.0.0
+CMD ["serve", "-s", "dist", "--listen", "5173"]
