--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,28 @@ http {
         }
 
 # ----------------------------------------------------
+        # 2b. USERS SERVICE (/users)
+        # ----------------------------------------------------
+        location /users/ {
+            proxy_pass http://auth_service;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+# ----------------------------------------------------
+        # 2c. SESSIONS SERVICE (/sessions)
+        # ----------------------------------------------------
+        location /sessions/ {
+            proxy_pass http://auth_service;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+# ----------------------------------------------------
         # 3. MEDIA SERVICE (/media)
         # ----------------------------------------------------
         location /media/ {
